--- a/BTL_CSS/index.html
+++ b/BTL_CSS/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>MERCEDES-BENZ</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1,
@@ -1541,7 +1541,7 @@
             </div>
         </section>
         <section id="footnotes">
-            <div class="container" data-aos="fade-up" data-aos-duration="1000">
+            <div class="container-fluid" data-aos="fade-up" data-aos-duration="1000">
                 <div class="head">
                     <p><i class="fas fa-gas-pump"></i> Kraftstoffverbrauch kombiniert</p>
                     <p><i class="fas fa-leaf"></i> CO₂-Emissionen kombiniert</p>
@@ -1864,9 +1864,9 @@
                 newItemShow.forEach(element => element.style.display = "block");
                 btn_new.style.display = "none";
                 
-                console.log(btn_new);
-                console.log(newItemShow);
-                console.log("new clicked");
+                // console.log(btn_new);
+                // console.log(newItemShow);
+                // console.log("new clicked");
             }
             function popularFunction() {
                 var popularItemShow = document.querySelectorAll("#navTabs #myTabContent #popular .popularContent .itemShow");
@@ -1875,9 +1875,9 @@
                 popularItemShow.forEach(element => element.style.display = "block");
                 btn_popular.style.display = "none";
 
-                console.log(btn_popular);
-                console.log(popularItemShow);
-                console.log("popular clicked");
+                // console.log(btn_popular);
+                // console.log(popularItemShow);
+                // console.log("popular clicked");
             }
             function videosFunction() {
                 var videosItemShow = document.querySelectorAll("#navTabs #myTabContent #videos .videosContent .itemShow");
@@ -1886,9 +1886,9 @@
                 videosItemShow.forEach(element => element.style.display = "block");
                 btn_videos.style.display = "none";
 
-                console.log(btn_videos);
-                console.log(videosItemShow);
-                console.log("videos clicked");
+                // console.log(btn_videos);
+                // console.log(videosItemShow);
+                // console.log("videos clicked");
             }
         </script>
 
